--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
 /*font-family*/
 @font-face {
     font-family: "value";
-    src: url(fonts/value.woff)
+    src: url(fonts/Value.woff)
 }
 
 @font-face {
     font-family: "value-medium";
-    src: url(fonts/value-medium.woff)
+    src: url(fonts/Value-Medium.woff)
 }
 
 @font-face {
     font-family: "value-bold";
-    src: url(fonts/value-bold.woff)
+    src: url(fonts/Value-Bold.woff)
 }
 
 @font-face {
     font-family: "value-black";
-    src: url(fonts/value-black.woff)
+    src: url(fonts/Value-Black.woff)
 }
 
 @font-face {
@@ -26,7 +26,7 @@
 
 @font-face {
     font-family: "value-italic";
-    src: url(fonts/value-italic.woff)
+    src: url(fonts/Value-Italic.woff)
 }
 
 /* Header */
