--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,32 @@
 /*font-family*/
 @font-face {
     font-family: "value";
-    src: url(fonts/Value.woff)
+    src: url(Fonts/Value.woff)
 }
 
 @font-face {
     font-family: "value-medium";
-    src: url(fonts/Value-Medium.woff)
+    src: url(Fonts/Value-Medium.woff)
 }
 
 @font-face {
     font-family: "value-bold";
-    src: url(fonts/Value-Bold.woff)
+    src: url(Fonts/Value-Bold.woff)
 }
 
 @font-face {
     font-family: "value-black";
-    src: url(fonts/Value-Black.woff)
+    src: url(Fonts/Value-Black.woff)
 }
 
 @font-face {
     font-family: "value-serif";
-    src: url(fonts/value-serif.ttf)
+    src: url(Fonts/value-serif.ttf)
 }
 
 @font-face {
     font-family: "value-italic";
-    src: url(fonts/Value-Italic.woff)
+    src: url(Fonts/Value-Italic.woff)
 }
 
 /* Header */
@@ -39,7 +39,7 @@ header {
 header ul {
     float: right;
     color: black;
-    font-family: "value-bold";
+    font-family: "Value-Bold";
     font-size: 25px;
     padding: 10px;
 }
@@ -59,7 +59,7 @@ header li {
 .main-menu a {
 margin: 0 20px;
 text-decoration: none;
-font-family: "value-bold", sans-serif;
+font-family: "Value-Bold", sans-serif;
 font-size: 25px;
 color: #1A1713;
 }
@@ -67,7 +67,7 @@ color: #1A1713;
 .main-menu a:hover {
 margin: 0 20px;
 text-decoration: none;
-font-family: "value-black", sans-serif;
+font-family: "Value-Black", sans-serif;
 font-size: 25px;
 color: #54CBF1;
 }
@@ -83,7 +83,7 @@ color: #54CBF1;
     height: 700px;
     margin: 0 auto;
     padding: 20 20 20 20;
-    background-image: url("images/bg2.png");
+    background-image: url("Images/bg2.png");
     background-repeat: no-repeat;
     background-size: 1400, 580;
     text-align: center;
@@ -94,14 +94,14 @@ color: #54CBF1;
 h1 {
     padding-top:180px;
     text-align: center;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
     font-size: 35px;
 }
 
 p {
     padding-bottom: 20px;
     text-align: center;
-    font-family: "value";
+    font-family: "Value";
     font-size: 25px
 }
 
@@ -116,7 +116,7 @@ a.button:link, a.button:visited {
     cursor: pointer;
     text-align: center;
     font-size:20px;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
 
 }
 
@@ -127,7 +127,7 @@ a.button:hover, a.button:active {
     cursor: pointer;
     font-size:20px;
     text-align: center;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
 
 }
 
@@ -143,7 +143,7 @@ body {
 
 .content2 {
     padding: 70px 70px;
-    background-image: url(images/timeline.png);
+    background-image: url(Images/timeline.png);
     background-repeat: no-repeat;
     height: 500px;
     background-size: initial;
@@ -156,7 +156,7 @@ body {
 h3 {
     padding-top: 0%;
     text-align: center;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
     font-size: 35px;
 }
 
@@ -174,28 +174,28 @@ h3 {
     margin-top: 0%;
     padding-top: 3%;
     margin-left: 0%;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
     font-size: 35px;
 
 }
 
 .columnOne{
     width: auto;
-    font-family: "value";
+    font-family: "Value";
     font-size: 20px;
 
 }
 
 .notIndented1{
     font-size: 30px;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
     padding-bottom: 0%;
 
 }
 
 .indented1{
     list-style: none;
-    font-family: "value";
+    font-family: "Value";
     font-size: 20px;
     line-height: 1.5;
 
@@ -204,21 +204,21 @@ h3 {
 
 .columnTwo{
     width: auto;
-    font-family: "value";
+    font-family: "Value";
     font-size: 20px;
 
 }
 
 .notIndented2{
     font-size: 30px;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
     padding-bottom: 0%;
 
 }
 
 .indented2{
     list-style: none;
-    font-family: "value";
+    font-family: "Value";
     font-size: 20px;
     line-height: 1.5;
 
@@ -226,14 +226,14 @@ h3 {
 
 .columnThree{
     width: auto;
-    font-family: "value";
+    font-family: "Value";
     font-size: 20px;
 
 }
 
 .notIndented3{
     font-size: 30px;
-    font-family: "value-medium";
+    font-family: "Value-Medium";
     padding-bottom: 0%;
 
 }
